--- a/.github/workflows/itop-triggered-workflow.yml
+++ b/.github/workflows/itop-triggered-workflow.yml
@@ -106,13 +106,18 @@ jobs:
           fi
 
           ERROR_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          
+          # 1. Resolver el ticket indicando el fallo
           JSON_PAYLOAD=$(cat <<EOF
           {
-            "operation": "core/update",
+            "operation": "core/apply_stimulus",
             "class": "UserRequest",
             "key": "${{ github.event.inputs.itop_ticket_id }}",
+            "stimulus": "ev_resolve",
             "comment": "El workflow de GitHub ha fallado.",
             "fields": {
+              "solution": "La automatización falló. Por favor, revise los logs para más detalles: ${ERROR_URL}",
+              "agent_id": "SELECT Person JOIN User ON User.contactid = Person.id WHERE User.login = '${ITOP_USER}'",
               "public_log": {
                 "add_item": {
                   "message": "El workflow de GitHub ha fallado. Por favor, revise los logs para más detalles: ${ERROR_URL}",
@@ -123,7 +128,31 @@ jobs:
           }
           EOF
           )
+          echo "::group::Resolviendo Ticket (Fallo)..."
           curl -k -X POST "${ITOP_URL}/webservices/rest.php?version=1.3" \
           --header "Content-Type: application/x-www-form-urlencoded" \
           -u "${ITOP_USER}:${ITOP_PASSWORD}" \
           --data-urlencode "json_data=$JSON_PAYLOAD"
+          echo "::endgroup::"
+
+          # 2. Cerrar el ticket con insatisfacción (1 = Very Dissatisfied)
+          JSON_PAYLOAD_CLOSE=$(cat <<EOF
+          {
+            "operation": "core/apply_stimulus",
+            "class": "UserRequest",
+            "key": "${{ github.event.inputs.itop_ticket_id }}",
+            "stimulus": "ev_close",
+            "comment": "Cierre automático por fallo de automatización.",
+            "fields": {
+              "user_satisfaction": 1,
+              "user_comment": "El proceso automático falló. Revisar logs."
+            }
+          }
+          EOF
+          )
+          echo "::group::Cerrando Ticket (Fallo)..."
+          curl -k -X POST "${ITOP_URL}/webservices/rest.php?version=1.3" \
+          --header "Content-Type: application/x-www-form-urlencoded" \
+          -u "${ITOP_USER}:${ITOP_PASSWORD}" \
+          --data-urlencode "json_data=$JSON_PAYLOAD_CLOSE"
+          echo "::endgroup::"
