--- a/.github/workflows/itop-triggered-workflow.yml
+++ b/.github/workflows/itop-triggered-workflow.yml
@@ -30,8 +30,8 @@ jobs:
       - name: Run automation script
         id: automation
         run: |
-          echo "Ejecutando la tarea automatizada..."
-          # exit 1 # Uncomment to test failure case
+          echo "Ejecutando la tarea automatizada... provocamos el fallo"
+          exit 1 # Uncomment to test failure case
 
   update-itop:
     runs-on: swarm-runners-scaleset
@@ -135,24 +135,24 @@ jobs:
           --data-urlencode "json_data=$JSON_PAYLOAD"
           echo "::endgroup::"
 
-          # 2. Cerrar el ticket con insatisfacción (1 = Very Dissatisfied)
-          JSON_PAYLOAD_CLOSE=$(cat <<EOF
-          {
-            "operation": "core/apply_stimulus",
-            "class": "UserRequest",
-            "key": "${{ github.event.inputs.itop_ticket_id }}",
-            "stimulus": "ev_close",
-            "comment": "Cierre automático por fallo de automatización.",
-            "fields": {
-              "user_satisfaction": 4,
-              "user_comment": "El proceso automático falló. Revisar logs."
-            }
-          }
-          EOF
-          )
-          echo "::group::Cerrando Ticket (Fallo)..."
-          curl -k -X POST "${ITOP_URL}/webservices/rest.php?version=1.3" \
-          --header "Content-Type: application/x-www-form-urlencoded" \
-          -u "${ITOP_USER}:${ITOP_PASSWORD}" \
-          --data-urlencode "json_data=$JSON_PAYLOAD_CLOSE"
-          echo "::endgroup::"
+          # # 2. Cerrar el ticket con insatisfacción (1 = Very Dissatisfied)
+          # JSON_PAYLOAD_CLOSE=$(cat <<EOF
+          # {
+          #   "operation": "core/apply_stimulus",
+          #   "class": "UserRequest",
+          #   "key": "${{ github.event.inputs.itop_ticket_id }}",
+          #   "stimulus": "ev_close",
+          #   "comment": "Cierre automático por fallo de automatización.",
+          #   "fields": {
+          #     "user_satisfaction": 4,
+          #     "user_comment": "El proceso automático falló. Revisar logs."
+          #   }
+          # }
+          # EOF
+          # )
+          # echo "::group::Cerrando Ticket (Fallo)..."
+          # curl -k -X POST "${ITOP_URL}/webservices/rest.php?version=1.3" \
+          # --header "Content-Type: application/x-www-form-urlencoded" \
+          # -u "${ITOP_USER}:${ITOP_PASSWORD}" \
+          # --data-urlencode "json_data=$JSON_PAYLOAD_CLOSE"
+          # echo "::endgroup::"
