--- a/.github/workflows/itop-triggered-workflow.yml
+++ b/.github/workflows/itop-triggered-workflow.yml
@@ -107,16 +107,14 @@ jobs:
 
           ERROR_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           
-          # 1. Resolver el ticket indicando el fallo
+          # 1. Actualizar el ticket indicando el fallo (sin resolver ni cerrar)
           JSON_PAYLOAD=$(cat <<EOF
           {
-            "operation": "core/apply_stimulus",
+            "operation": "core/update",
             "class": "UserRequest",
             "key": "${{ github.event.inputs.itop_ticket_id }}",
-            "stimulus": "ev_resolve",
             "comment": "El workflow de GitHub ha fallado.",
             "fields": {
-              "solution": "La automatización falló. Por favor, revise los logs para más detalles: ${ERROR_URL}",
               "agent_id": "SELECT Person JOIN User ON User.contactid = Person.id WHERE User.login = '${ITOP_USER}'",
               "public_log": {
                 "add_item": {
@@ -128,7 +126,7 @@ jobs:
           }
           EOF
           )
-          echo "::group::Resolviendo Ticket (Fallo)..."
+          echo "::group::Actualizando Ticket (Fallo)..."
           curl -k -X POST "${ITOP_URL}/webservices/rest.php?version=1.3" \
           --header "Content-Type: application/x-www-form-urlencoded" \
           -u "${ITOP_USER}:${ITOP_PASSWORD}" \
@@ -136,23 +134,8 @@ jobs:
           echo "::endgroup::"
 
           # # 2. Cerrar el ticket con insatisfacción (1 = Very Dissatisfied)
+          # Eliminado: En caso de fallo, el ticket debe permanecer abierto para revisión manual.
           # JSON_PAYLOAD_CLOSE=$(cat <<EOF
-          # {
-          #   "operation": "core/apply_stimulus",
-          #   "class": "UserRequest",
-          #   "key": "${{ github.event.inputs.itop_ticket_id }}",
-          #   "stimulus": "ev_close",
-          #   "comment": "Cierre automático por fallo de automatización.",
-          #   "fields": {
-          #     "user_satisfaction": 4,
-          #     "user_comment": "El proceso automático falló. Revisar logs."
-          #   }
-          # }
+          # ...
           # EOF
           # )
-          # echo "::group::Cerrando Ticket (Fallo)..."
-          # curl -k -X POST "${ITOP_URL}/webservices/rest.php?version=1.3" \
-          # --header "Content-Type: application/x-www-form-urlencoded" \
-          # -u "${ITOP_USER}:${ITOP_PASSWORD}" \
-          # --data-urlencode "json_data=$JSON_PAYLOAD_CLOSE"
-          # echo "::endgroup::"
