--- a/.github/workflows/itop-audit-export.yml
+++ b/.github/workflows/itop-audit-export.yml
@@ -5,115 +5,30 @@ on:
     # Ejecutar a las 01:00 UTC todos los días
     - cron: '0 1 * * *'
   workflow_dispatch:
-    # Permite ejecución manual para pruebas
+    inputs:
+      date:
+        description: 'Fecha a exportar (YYYY-MM-DD). Dejar vacío para "ayer".'
+        required: false
+        default: ''
 
 jobs:
   audit-export:
     runs-on: swarm-runners-scaleset
     permissions:
-      contents: write  # Necesario para hacer commit de los ficheros
+      contents: write
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: pip install requests
-
       - name: Export iTop Data
-        env:
-          ITOP_URL: ${{ secrets.ITOP_URL || vars.ITOP_URL }}
-          ITOP_USER: ${{ secrets.ITOP_API_USER }}
-          ITOP_PASSWORD: ${{ secrets.ITOP_API_PASSWORD }}
-        run: |
-          python3 - <<EOF
-          import os
-          import json
-          import requests
-          from datetime import datetime, timedelta
-
-          # Configuración
-          ITOP_URL = os.environ.get('ITOP_URL')
-          ITOP_USER = os.environ.get('ITOP_USER')
-          ITOP_PASSWORD = os.environ.get('ITOP_PASSWORD')
-          
-          # Verificar configuración
-          if not ITOP_URL or not ITOP_USER or not ITOP_PASSWORD:
-              print("::error::Faltan variables de entorno ITOP_URL, ITOP_USER o ITOP_PASSWORD")
-              exit(1)
-
-          # Calcular fechas (Ayer completo)
-          today = datetime.now()
-          yesterday = today - timedelta(days=1)
-          date_str = yesterday.strftime('%Y-%m-%d')
-          
-          start_time = yesterday.strftime('%Y-%m-%d 00:00:00')
-          end_time = yesterday.strftime('%Y-%m-%d 23:59:59')
-          
-          print(f"Exportando datos para la fecha: {date_str}")
-          print(f"Rango: {start_time} a {end_time}")
-
-          # Mapeo de Clases a Nombres de Fichero
-          # Clases: UserRequest, Incident, Problem, Change
-          targets = [
-              {"class": "UserRequest", "filename": f"requerimientos_{date_str}.json"},
-              {"class": "Incident", "filename": f"incidentes_{date_str}.json"},
-              {"class": "Problem", "filename": f"problemas_{date_str}.json"},
-              {"class": "Change", "filename": f"cambios_{date_str}.json"}
-          ]
-
-          output_dir = "audit/itop"
-          os.makedirs(output_dir, exist_ok=True)
-
-          for target in targets:
-              class_name = target["class"]
-              filename = target["filename"]
-              file_path = os.path.join(output_dir, filename)
-              
-              # Construir OQL
-              # Usamos start_date como fecha de creación estándar. 
-              # Ajustar si tu iTop usa otro campo custom, pero start_date es el estándar.
-              oql = f"SELECT {class_name} WHERE start_date >= '{start_time}' AND start_date <= '{end_time}'"
-              
-              payload = {
-                  "operation": "core/get",
-                  "class": class_name,
-                  "key": oql,
-                  "output_fields": "*", # Traer toda la información
-                  "version": "1.3"
-              }
-              
-              try:
-                  response = requests.post(
-                      f"{ITOP_URL}/webservices/rest.php",
-                      auth=(ITOP_USER, ITOP_PASSWORD),
-                      data={"json_data": json.dumps(payload)},
-                      verify=False # Ignorar SSL si es autofirmado (ajustar según entorno)
-                  )
-                  
-                  if response.status_code == 200:
-                      data = response.json()
-                      
-                      # Guardar a fichero
-                      with open(file_path, 'w', encoding='utf-8') as f:
-                          json.dump(data, f, indent=2, ensure_ascii=False)
-                      
-                      count = len(data.get('objects', {})) if data.get('objects') else 0
-                      print(f"✅ {class_name}: {count} registros guardados en {filename}")
-                      
-                  else:
-                      print(f"❌ Error HTTP {response.status_code} al consultar {class_name}")
-                      print(response.text)
-                      
-              except Exception as e:
-                  print(f"❌ Excepción al procesar {class_name}: {str(e)}")
-
-          EOF
+        uses: ./.github/actions/itop-export
+        with:
+          itop-url: ${{ secrets.ITOP_URL || vars.ITOP_URL }}
+          itop-user: ${{ secrets.ITOP_API_USER }}
+          itop-password: ${{ secrets.ITOP_API_PASSWORD }}
+          date: ${{ github.event.inputs.date }}
+          output-dir: 'audit/itop'
 
       - name: Commit and Push changes
         run: |
@@ -126,6 +41,6 @@ jobs:
           if git diff --staged --quiet; then
             echo "No hay nuevos ficheros de auditoría para guardar."
           else
-            git commit -m "Audit: iTop export for $(date -d "yesterday" +%Y-%m-%d)"
+            git commit -m "Audit: iTop export $(date +%Y-%m-%d)"
             git push
           fi
