--- a/.github/workflows/update-hosts.yml
+++ b/.github/workflows/update-hosts.yml
@@ -45,33 +45,18 @@ jobs:
         run: |
           git config --global user.name "${{ secrets.KAOS_BOT_NAME }}"
           git config --global user.email "${{ secrets.KAOS_BOT_EMAIL }}"
-          git pull origin ${{ github.ref }}
+          git pull --rebase
           git add ${{ env.KAOS_PATH_RESUME }}*
-          if ! git diff --staged --quiet; then
-             git commit -m "[Ka0S] Cluster Update Logs - Run ${{ github.run_id }}"
-             git push origin ${{ github.ref }}
-          else
-             echo "No changes to commit."
-          fi
-
-      - name: Send Telegram Notification (Success)
-        if: success()
-        continue-on-error: true
-        uses: ./.github/actions/telegram-notify
-        with:
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          chat_id: ${{ secrets.TELEGRAM_CHAT_ID }}
-          status: 'success'
-          workflow: 'Cluster Update'
-          run_id: ${{ github.run_id }}
-
-      - name: Send Telegram Notification (Failure)
-        if: failure()
-        continue-on-error: true
-        uses: ./.github/actions/telegram-notify
-        with:
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          chat_id: ${{ secrets.TELEGRAM_CHAT_ID }}
-          status: 'failure'
-          workflow: 'Cluster Update'
-          run_id: ${{ github.run_id }}
+          git commit -m "[Ka0S] Cluster Update Logs - Run ${{ github.run_id }}" || echo "No changes to commit"
+          MAX_RETRIES=5
+          COUNT=0
+          until git push origin ${{ github.ref }} --force-with-lease; do
+            COUNT=$((COUNT+1))
+            if [ $COUNT -ge $MAX_RETRIES ]; then
+              echo "❌ Error: git push failed after $MAX_RETRIES attempts."
+              exit 1
+            fi
+            echo "⚠️ git push failed, retrying ($COUNT/$MAX_RETRIES)..."
+            git pull --rebase
+            sleep 2
+          done
