--- a/.github/workflows/update-hosts.yml
+++ b/.github/workflows/update-hosts.yml
@@ -1,5 +1,7 @@
 name: Ka0s Cluster System Update
 on:
+  schedule:
+      - cron: '0 22 * * *'  # Ejecución diaria a las 00:00 UTC
   workflow_dispatch:
     inputs:
       results-path:
