--- a/.github/workflows/ssh-connect.yml
+++ b/.github/workflows/ssh-connect.yml
@@ -1,11 +1,13 @@
 name: Ka0s C0re SSH Host Connect
 on:
+  schedule:
+      - cron: '0 22 * * *'  # Ejecución diaria a las 00:00 UTC
   workflow_dispatch:
     inputs:
       script-path:
         description: 'Path of the script to execute'
         required: true
-        default: 'devops/core/host/test.sh'
+        default: 'devops/core/k8s/kube-audit.sh'
       script-args:
         description: 'Arguments for the script'
         required: false
@@ -13,7 +15,7 @@ on:
       results-path:
         description: 'Path in the repository to store results'
         required: false
-        default: 'audit/eresults/'
+        default: 'audit/kube/'
 
   schedule:
     - cron: '0 22 * * *'  # Run daily at midnight at UTC
