fix(workflow): add missing remote-results-path input

--- a/.github/workflows/audit-pods.yml
+++ b/.github/workflows/audit-pods.yml
@@ -31,6 +31,7 @@ jobs:
           use-sudo: true # Requerido para acceso a kubeconfig admin si aplica
           pass: ${{ secrets.KAOS_SSH_PASS }}
           script-path: 'devops/core/k8s/audit-failed-pods.sh'
+          remote-results-path: '/tmp/results'
           local-results-path: 'audit/kube/'
 
       - name: Commit Results
