--- a/.github/workflows/audit-pods.yml
+++ b/.github/workflows/audit-pods.yml
@@ -3,7 +3,7 @@ name: Ka0s Audit Failed Pods
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 */6 * * *' # Ejecutar cada 6 horas
+    - cron: '*/30 * * * *' # Ejecutar cada 30 minutos
 
 permissions:
   contents: write
