--- a/.github/workflows/kaos-security-audit.yml
+++ b/.github/workflows/kaos-security-audit.yml
@@ -26,15 +26,28 @@ jobs:
 
       - name: Run Workload Security Audit
         run: |
-          ./devops/core/k8s/security-audit-workloads.sh audit-report.md
+          mkdir -p core/outputs/audit/security
+          REPORT_FILE="core/outputs/audit/security/report-$(date +%Y%m%d-%H%M).md"
+          echo "REPORT_FILE=$REPORT_FILE" >> $GITHUB_ENV
+          
+          ./devops/core/k8s/security-audit-workloads.sh "$REPORT_FILE"
           
       - name: Run RBAC & Network Security Audit
         run: |
-          ./devops/core/k8s/security-audit-rbac-net.sh audit-report.md
-          cat audit-report.md
+          ./devops/core/k8s/security-audit-rbac-net.sh "${{ env.REPORT_FILE }}"
+          cat "${{ env.REPORT_FILE }}"
 
       - name: Upload Audit Report
         uses: actions/upload-artifact@v4
         with:
           name: k8s-security-report
-          path: audit-report.md
+          path: ${{ env.REPORT_FILE }}
+
+      - name: Commit Audit Report
+        run: |
+          git config --global user.name "Ka0s Security Bot"
+          git config --global user.email "security@ka0s.io"
+          git pull origin main
+          git add core/outputs/audit/security/
+          git commit -m "chore(security): add audit report $(date +%Y-%m-%d)"
+          git push origin main
