--- a/.github/workflows/kaos-security-audit.yml
+++ b/.github/workflows/kaos-security-audit.yml
@@ -6,7 +6,7 @@ on:
     - cron: '0 8 * * 1' # Every Monday at 08:00 UTC
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   audit-cluster:
@@ -26,8 +26,8 @@ jobs:
 
       - name: Run Workload Security Audit
         run: |
-          mkdir -p core/outputs/audit/security
-          REPORT_FILE="core/outputs/audit/security/report-$(date +%Y%m%d-%H%M).md"
+          mkdir -p audit/kube
+          REPORT_FILE="audit/kube/report-$(date +%Y%m%d-%H%M).md"
           echo "REPORT_FILE=$REPORT_FILE" >> $GITHUB_ENV
           
           ./devops/core/k8s/security-audit-workloads.sh "$REPORT_FILE"
@@ -48,6 +48,6 @@ jobs:
           git config --global user.name "Ka0s Security Bot"
           git config --global user.email "security@ka0s.io"
           git pull origin main
-          git add core/outputs/audit/security/
+          git add audit/kube/
           git commit -m "chore(security): add audit report $(date +%Y-%m-%d)"
           git push origin main
