fix(workflows): enforce usage of swarm-runners-scaleset for all workflows

--- a/.github/workflows/kaos-security-audit.yml
+++ b/.github/workflows/kaos-security-audit.yml
@@ -11,7 +11,7 @@ permissions:
 jobs:
   audit-cluster:
     name: Audit Kubernetes Security
-    runs-on: ubuntu-latest
+    runs-on: swarm-runners-scaleset
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
