--- a/.github/workflows/docs-index-auto-update.yml
+++ b/.github/workflows/docs-index-auto-update.yml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
   update-index:
-    runs-on: ubuntu-latest
+    runs-on: swarm-runners-scaleset
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
