--- a/.github/workflows/add-doc-to-db.yml
+++ b/.github/workflows/add-doc-to-db.yml
@@ -1,9 +1,9 @@
 name: Ka0s Autom add docs to MongoDB
 
 on:
-  #workflow_dispatch:
-  schedule:
-   - cron: '0 * * * *'  # Ejecución cada hora en el minuto 0
+  workflow_dispatch:
+  #schedule:
+  # - cron: '0 * * * *'  # Ejecución cada hora en el minuto 0
 
 permissions:
   contents: write
