feat(workflows): add success/failure handling jobs and enforce runner policy

--- a/.github/workflows/kaos-compliance-test.yml
+++ b/.github/workflows/kaos-compliance-test.yml
@@ -10,6 +10,9 @@ on:
       - '.github/workflows/kaos-compliance-test.yml'
   workflow_dispatch:
 
+env:
+  KAOS_MODULE: "[Ka0S] Compliance Test Suite"
+
 jobs:
   test-json:
     runs-on: swarm-runners-scaleset
