--- a/.github/workflows/test-kubectl-tunnel.yml
+++ b/.github/workflows/test-kubectl-tunnel.yml
@@ -3,9 +3,12 @@ name: 'Ka0s Test Kubectl Tunnel'
 on:
   workflow_dispatch:
 
+env:
+  KAOS_MODULE: "[Ka0S] Kubectl Tunnel Test"
+
 jobs:
   test-tunnel:
-    runs-on: ubuntu-latest
+    runs-on: swarm-runners-scaleset
     steps:
       - name: Checkout
         uses: actions/checkout@v4
