--- a/core/b2b/core-services/itop/itop-deployment.yaml
+++ b/core/b2b/core-services/itop/itop-deployment.yaml
@@ -18,14 +18,14 @@ spec:
     spec:
       initContainers:
         - name: init-itop-files
-          image: vbkunin/itop:latest-base
+          image: vbkunin/itop:3.2.0-base
           command: ['sh', '-c', 'cp -r /var/www/html/. /web-data/ && chown -R 33:33 /web-data']
           volumeMounts:
             - name: itop-web-persistent-storage
               mountPath: /web-data
       containers:
         - name: itop
-          image: vbkunin/itop:latest-base
+          image: vbkunin/itop:3.2.0-base
           ports:
             - containerPort: 80
           env:
