--- a/core/b2b/core-services/monitoring/cadvisor-daemonset.yaml
+++ b/core/b2b/core-services/monitoring/cadvisor-daemonset.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: cadvisor
-        image: gcr.io/cadvisor/cadvisor:latest
+        image: gcr.io/cadvisor/cadvisor:v0.47.0
         ports:
         - containerPort: 8080
           name: http
