--- a/core/b2b/core-services/monitoring/loki-statefulset.yaml
+++ b/core/b2b/core-services/monitoring/loki-statefulset.yaml
@@ -20,7 +20,7 @@ spec:
         fsGroup: 10001
       containers:
         - name: loki
-          image: grafana/loki:latest
+          image: grafana/loki:2.9.4
           args:
             - "-config.file=/etc/loki/loki-config.yaml"
             - "--ingester.wal-enabled=true"
