--- a/core/b2b/core-services/monitoring/promtail-daemonset.yaml
+++ b/core/b2b/core-services/monitoring/promtail-daemonset.yaml
@@ -17,7 +17,7 @@ spec:
       serviceAccountName: promtail
       containers:
         - name: promtail
-          image: grafana/promtail:latest
+          image: grafana/promtail:2.9.4
           args:
             - "-config.file=/etc/promtail/promtail.yaml"
           volumeMounts:
