test(ci): trigger validation workflow

--- a/core/b2b/core-services/itop/itop-deployment.yaml
+++ b/core/b2b/core-services/itop/itop-deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: itop
     core.kaos.io/type: finops
-    ci-test: "true"
+    ci-test: "verification-run"
 spec:
   replicas: 1
   selector:
