--- a/core/b2b/core-services/itop/itop-service.yaml
+++ b/core/b2b/core-services/itop/itop-service.yaml
@@ -7,11 +7,10 @@ metadata:
     app: itop
     core.kaos.io/type: finops
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
     - port: 80
       targetPort: 80
       protocol: TCP
-      nodePort: 30080
   selector:
     app: itop
