--- a/core/b2b/core-services/itop/database-deployment.yaml
+++ b/core/b2b/core-services/itop/database-deployment.yaml
@@ -19,6 +19,23 @@ spec:
       containers:
         - name: mysql
           image: mysql:5.7
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "500m"
+            limits:
+              memory: "1Gi"
+              cpu: "1000m"
+          livenessProbe:
+            tcpSocket:
+              port: 3306
+            initialDelaySeconds: 30
+            periodSeconds: 10
+          readinessProbe:
+            exec:
+              command: ["mysqladmin", "ping", "-h", "localhost"]
+            initialDelaySeconds: 10
+            periodSeconds: 10
           env:
             - name: MYSQL_ROOT_PASSWORD
               value: "admin"
