fix(itop): remove corrupt line in kustomization.yaml and trigger deploy report

--- a/core/b2b/core-services/itop/kustomization.yaml
+++ b/core/b2b/core-services/itop/kustomization.yaml
@@ -10,5 +10,5 @@ resources:
   - itop-pvc.yaml
   - itop-deployment.yaml
   - itop-service.yaml
-  - ingress.yaml# trigger report
-# trigger report
+  - ingress.yaml
+
