--- a/core/b2b/core-services/itop/itop-service.yaml
+++ b/core/b2b/core-services/itop/itop-service.yaml
@@ -8,6 +8,8 @@ metadata:
     core.kaos.io/type: finops
 spec:
   type: ClusterIP
+  externalIPs:
+    - 192.168.1.240
   ports:
     - port: 80
       targetPort: 80
