fix(itop): change service type to LoadBalancer to enable MetalLB ARP routing

--- a/core/b2b/core-services/itop/itop-service.yaml
+++ b/core/b2b/core-services/itop/itop-service.yaml
@@ -7,9 +7,8 @@ metadata:
     app: itop
     core.kaos.io/type: finops
 spec:
-  type: ClusterIP
-  externalIPs:
-    - 192.168.1.240
+  type: LoadBalancer
+  loadBalancerIP: 192.168.1.240
   ports:
     - port: 80
       targetPort: 80
