chore(itop): update deployment label for validation test

--- a/core/b2b/core-services/itop/itop-deployment.yaml
+++ b/core/b2b/core-services/itop/itop-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: itop
   labels:
     app: itop
-    core.kaos.io/type: finops
+    core.kaos.io/type: b2b-core
 spec:
   replicas: 1
   selector:
