fix(ci): add write permissions to cd workflow for audit reports

--- a/.github/workflows/cd-core-services.yml
+++ b/.github/workflows/cd-core-services.yml
@@ -7,6 +7,9 @@ on:
       - 'core/b2b/core-services/**'
       - '!core/b2b/core-services/kube/**'
 
+permissions:
+  contents: write
+
 jobs:
   deploy-services:
     name: Deploy Changed Services
