feat(ops): enable dashboard ingress and add trivy-operator for security insights

--- a/core/b2b/core-services/kubernetes-dashboard/kustomization.yaml
+++ b/core/b2b/core-services/kubernetes-dashboard/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - dashboard-install.yaml
   - admin-user.yaml
+  - ingress.yaml
 
 patches:
   - path: service-patch.yaml
