--- a/core/b2b/core-services/zabbix/zabbix-server-deployment.yaml
+++ b/core/b2b/core-services/zabbix/zabbix-server-deployment.yaml
@@ -30,6 +30,16 @@ spec:
               value: "admin"
             - name: POSTGRES_DB
               value: "zabbix"
+            - name: ZBX_CACHESIZE
+              value: "512M"
+            - name: ZBX_HISTORYCACHESIZE
+              value: "128M"
+            - name: ZBX_TRENDCACHESIZE
+              value: "128M"
+            - name: ZBX_VALUECACHESIZE
+              value: "256M"
+            - name: ZBX_STARTVMWARECOLLECTORS
+              value: "0"
           volumeMounts:
             - name: zabbix-server-data
               mountPath: /var/lib/zabbix
