fix(itop): enable dynamic LB IP and pin deployments to k8-node-20 for persistence

--- a/core/b2b/core-services/itop/database-deployment.yaml
+++ b/core/b2b/core-services/itop/database-deployment.yaml
@@ -16,6 +16,8 @@ spec:
       labels:
         app: mysql
     spec:
+      nodeSelector:
+        kubernetes.io/hostname: k8-node-20
       containers:
         - name: mysql
           image: mysql:5.7
