--- a/core/b2b/core-services/itop/itop-deployment.yaml
+++ b/core/b2b/core-services/itop/itop-deployment.yaml
@@ -16,6 +16,8 @@ spec:
       labels:
         app: itop
     spec:
+      nodeSelector:
+        kubernetes.io/hostname: k8-node-20
       initContainers:
         - name: init-itop-files
           image: vbkunin/itop:latest-base
