fix(itop): use Recreate strategy to avoid locking issues with hostPath

--- a/core/b2b/core-services/itop/database-deployment.yaml
+++ b/core/b2b/core-services/itop/database-deployment.yaml
@@ -8,6 +8,8 @@ metadata:
     core.kaos.io/type: finops
 spec:
   replicas: 1
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       app: mysql
