Deploy new itop

--- a/core/b2b/core-services/itop/kustomization.yaml
+++ b/core/b2b/core-services/itop/kustomization.yaml
@@ -12,5 +12,5 @@ resources:
   - itop-service.yaml
   - ingress.yaml
   - fix-db-permissions-job.yaml
-  # Trigger validation for user request
+  # Trigger validation for user request and deployment
 
