feat(planka): configure IP BASE_URL and add Ingress for FQDN

--- a/core/b2b/core-services/planka/planka-deployment.yaml
+++ b/core/b2b/core-services/planka/planka-deployment.yaml
@@ -26,9 +26,7 @@ spec:
             - containerPort: 1337
           env:
             - name: BASE_URL
-              value: "http://planka.ka0s.io" # Default external URL. 
-              # Note: Planka might require rebuild or restart to change this. 
-              # If we need dual access, we might need to patch index.html or config in initContainer.
+              value: "http://192.168.1.244" # IP Access
             - name: TRUST_PROXY
               value: "0"
             - name: DATABASE_URL
