--- a/core/b2b/core-services/planka/kustomization.yaml
+++ b/core/b2b/core-services/planka/kustomization.yaml
@@ -7,4 +7,5 @@ resources:
   - postgres-deployment.yaml
   - planka-storage.yaml
   - planka-deployment.yaml
+  - planka-ingress.yaml
 # Trigger deployment
