feat(planka): prefer scheduling on k8-node-20

--- a/core/b2b/core-services/planka/planka-deployment.yaml
+++ b/core/b2b/core-services/planka/planka-deployment.yaml
@@ -66,6 +66,16 @@ spec:
         - name: planka-data
           persistentVolumeClaim:
             claimName: planka-data-pvc
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 100
+              preference:
+                matchExpressions:
+                  - key: kubernetes.io/hostname
+                    operator: In
+                    values:
+                      - k8-node-20
 ---
 apiVersion: v1
 kind: Service
