Re Deploy PLANKA

--- a/core/b2b/core-services/planka/planka-deployment.yaml
+++ b/core/b2b/core-services/planka/planka-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           command: ['sh', '-c', 'until pg_isready -h planka-db -U planka; do echo waiting for database; sleep 2; done;']
       containers:
         - name: planka
-          image: ghcr.io/plankanban/planka:master
+          image: ghcr.io/plankanban/planka:latest
           ports:
             - containerPort: 1337
           env:
