refactoring and deploys

--- a/core/b2b/core-services/planka/kustomization.yaml
+++ b/core/b2b/core-services/planka/kustomization.yaml
@@ -7,4 +7,6 @@ resources:
   - postgres-deployment.yaml
   - planka-storage.yaml
   - planka-deployment.yaml
+  - resource-quota.yaml
+  - ingress.yaml
 # Trigger deployment
