Redeploy fix fqdn

--- a/core/b2b/core-services/zabbix/ingress.yaml
+++ b/core/b2b/core-services/zabbix/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: zabbix.ka0s.io
+    - host: noc.ka0s.io
       http:
         paths:
           - path: /
