--- a/core/b2b/core-services/ingress-nginx/kustomization.yaml
+++ b/core/b2b/core-services/ingress-nginx/kustomization.yaml
@@ -11,3 +11,8 @@ patches:
       kind: Service
       name: ingress-nginx-controller
       namespace: ingress-nginx
+  - path: deployment-patch.yaml
+    target:
+      kind: Deployment
+      name: ingress-nginx-controller
+      namespace: ingress-nginx
