Enable scheduled workflow for hourly execution
Uncomment schedule to enable hourly execution.

--- a/.github/workflows/add-doc-to-db.yml
+++ b/.github/workflows/add-doc-to-db.yml
@@ -2,8 +2,8 @@ name: Ka0s Autom add docs to MongoDB
 
 on:
   workflow_dispatch:
-  #schedule:
-  # - cron: '0 * * * *'  # Ejecución cada hora en el minuto 0
+  schedule:
+   - cron: '0 * * * *'  # Ejecución cada hora en el minuto 0
 
 permissions:
   contents: write
