fix(planka): force pod restart to apply BASE_URL change

--- a/core/b2b/core-services/planka/planka-deployment.yaml
+++ b/core/b2b/core-services/planka/planka-deployment.yaml
@@ -12,6 +12,8 @@ spec:
       app: planka
   template:
     metadata:
+      annotations:
+        kubectl.kubernetes.io/restartedAt: "2026-02-09T09:20:00Z"
       labels:
         app: planka
     spec:
