--- a/core/b2b/core-services/ingress-nginx/kustomization.yaml
+++ b/core/b2b/core-services/ingress-nginx/kustomization.yaml
@@ -16,3 +16,8 @@ patches:
       kind: Deployment
       name: ingress-nginx-controller
       namespace: ingress-nginx
+  - path: configmap-patch.yaml
+    target:
+      kind: ConfigMap
+      name: ingress-nginx-controller
+      namespace: ingress-nginx
