fix(ingress): force restart controller to enable snippets

--- a/core/b2b/core-services/ingress-nginx/deployment-patch.yaml
+++ b/core/b2b/core-services/ingress-nginx/deployment-patch.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: ingress-nginx
 spec:
   template:
+    metadata:
+      annotations:
+        kubectl.kubernetes.io/restartedAt: "2026-02-09T09:40:00Z"
     spec:
       containers:
         - name: controller
