chore(planka): retry ingress update to trigger webhook validation

--- a/core/b2b/core-services/planka/ingress.yaml
+++ b/core/b2b/core-services/planka/ingress.yaml
@@ -24,4 +24,5 @@ spec:
                 name: planka
                 port:
                   number: 80
-# Force update to apply snippet annotations after controller restart
+# Force update: retry apply snippet annotations
+
