fix(deploy): update ingress-nginx and planka concurrently to resolve webhook block

--- a/core/b2b/core-services/planka/ingress.yaml
+++ b/core/b2b/core-services/planka/ingress.yaml
@@ -24,5 +24,5 @@ spec:
                 name: planka
                 port:
                   number: 80
-# Force update: retry apply snippet annotations
+# Force update: sync with ingress controller update
 
